--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@
 # VITE_API_URL=http://localhost:5000  
 
 # MONGODB BACKEND 
-VITE_API_URL=https://jass-crm-backend-mongo.onrender.com
+# VITE_API_URL=https://jass-crm-backend-mongo.onrender.com
+VITE_API_URL=https://jass-crm-backend-mongo-r70t.onrender.com
 
 # VITE_API_URL=https://jass-crm-backend-berd.onrender.com 
 # VITE_API_URL=https://th-inventory-backend-rtrc.onrender.com - 
