--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 
+   
+# VITE_API_URL=http://localhost:5000
+VITE_API_URL=http://93.127.167.226:3037   
 
-# VITE_API_URL=http://localhost:5000   
 
-
-VITE_API_URL=https://jass-crm-backend-mongo-r70t.onrender.com  
+# VITE_API_URL=https://jass-crm-backend-mongo-r70t.onrender.com  
 
 # MONGODB BACKEND 
 # VITE_API_URL=https://jass-crm-backend-mongo.onrender.com
