--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 
    
 # VITE_API_URL=http://localhost:5000
-VITE_API_URL=http://93.127.167.226:3037   
+# VITE_API_URL=http://93.127.167.226:3037   
+VITE_API_URL=https://jass-crm-backend-mongo.onrender.com   
 
 
 # VITE_API_URL=https://jass-crm-backend-mongo-r70t.onrender.com  
