--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 
    
 # VITE_API_URL=http://localhost:5000
-VITE_API_URL=https://93.127.167.226:3037    
-# VITE_API_URL=https://jass-crm-backend-mongo.onrender.com   
+# VITE_API_URL=https://93.127.167.226:3037    
+# VITE_API_URL=https://jass.techorses.com/api/ 
+VITE_API_URL=https://jass-crm-backend-mongo.onrender.com   
 
 
 # VITE_API_URL=https://jass-crm-backend-mongo-r70t.onrender.com  
