--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
    
-VITE_API_URL=http://localhost:5000  
-# VITE_API_URL=https://jass.techorses.com/api
+# VITE_API_URL=http://localhost:5000  
+VITE_API_URL=https://jass.techorses.com/api
 # VITE_API_URL=https://jass-crm-backend-mongo.onrender.com   
 
 
